--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.vaadin.adam</groupId>
+    <groupId>org.vaadin.addons</groupId>
     <artifactId>filtering-grid</artifactId>
     <version>0.1-SNAPSHOT</version>
     <name>filtering-grid</name>
@@ -11,7 +11,7 @@
     </organization>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <vaadin.version>8.2.0</vaadin.version>
+        <vaadin.version>8.3.1</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
         <!-- ZIP Manifest fields -->
         <Implementation-Version>${project.version}</Implementation-Version>
@@ -20,7 +20,7 @@
         <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
         <Vaadin-License-Title>Apache License 2.0</Vaadin-License-Title>
         <Vaadin-Addon>${project.artifactId}-${project.version}.jar</Vaadin-Addon>
-        <github.account>[YOUR_GITHUB_ACCOUNT]</github.account>
+        <github.account>wbadam</github.account>
         <github.project>filtering-grid</github.project>
     </properties>
     <scm>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.vaadin</groupId>
             <artifactId>addon-test-helpers</artifactId>
-            <version>2.0.alpha5</version>
+            <version>2.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
