--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
         <Vaadin-License-Title>Apache License 2.0</Vaadin-License-Title>
         <Vaadin-Addon>${project.artifactId}-${project.version}.jar</Vaadin-Addon>
+        <Vaadin-Stylesheets>VAADIN/addons/filteringgrid/filtering-grid.scss</Vaadin-Stylesheets>
         <github.account>wbadam</github.account>
         <github.project>filtering-grid</github.project>
     </properties>
@@ -127,6 +128,7 @@
                             <!-- Package format version - do not change -->
                             <Vaadin-Package-Version>1</Vaadin-Package-Version>
                             <Vaadin-License-Title>${Vaadin-License-Title}</Vaadin-License-Title>
+                            <Vaadin-Stylesheets>${Vaadin-Stylesheets}</Vaadin-Stylesheets>
                         </manifestEntries>
                     </archive>
                 </configuration>
